@@ -18,13 +18,18 @@ class LogStash::Filters::UserAgent < LogStash::Filters::Base
   # array, only the first value will be used.
   config :source, :validate => :string, :required => true
 
-  # The name of the field to assign the UA data hash to
-  config :target, :validate => :string, :default => "ua"
+  # The name of the field to assign user agent data into.
+  #
+  # If not specified user agent data will be stored in the root of the event.
+  config :target, :validate => :string
 
   # regexes.yaml file to use
   #
   # If not specified, this will default to the regexes.yaml that ships
   # with logstash.
+  #
+  # You can find the latest version of this here:
+  # <https://github.com/tobie/ua-parser/blob/master/regexes.yaml>
   config :regexes, :validate => :string
 
   public
@@ -68,24 +73,24 @@ class LogStash::Filters::UserAgent < LogStash::Filters::Base
     end
 
     if !ua_data.nil?
-        event[@target] = {} if event[@target].nil?
+      if @target.nil?
+        # default write to the root of the event
+        target = event
+      else
+        target = event[@target] ||= {}
+      end
 
-        event[@target]["name"] = ua_data.name
-        event[@target]["os"] = ua_data.os.to_s if not ua_data.os.nil?
-        event[@target]["device"] = ua_data.device.to_s if not ua_data.device.nil?
+      target["name"] = ua_data.name
+      target["os"] = ua_data.os.to_s if not ua_data.os.nil?
+      target["device"] = ua_data.device.to_s if not ua_data.device.nil?
 
-        if not ua_data.version.nil?
-          ua_version = ua_data.version
-
-          event[@target]["major"] = ua_version.major
-          event[@target]["minor"] = ua_version.minor
-          if ua_version.patch
-            event[@target]["patch"] = ua_version.patch
-          end
-          if ua_version.patch_minor 
-            event[@target]["build"] = ua_version.patch_minor 
-          end
-        end
+      if not ua_data.version.nil?
+        ua_version = ua_data.version
+        target["major"] = ua_version.major
+        target["minor"] = ua_version.minor
+        target["patch"] = ua_version.patch if ua_version.patch
+        target["build"] = ua_version.patch_minor if ua_version.patch_minor 
+      end
 
       filter_matched(event)
     end
